--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+*.log 
+*.pyc 
+
 Stellar_0.1/.idea/.name
 
 Stellar_0.1/.idea/encodings.xml
@@ -9,4 +12,3 @@ Stellar_0.1/.idea/modules.xml
 
 Stellar_0.1/.idea/Stellar_0.1.iml
 
-Stellar_0.1/.idea/workspace.xml
