--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,6 @@
 Stellar_0.1/.idea/*
 Stellar_0.1/stl_test_back/rqalpha/data_bundle/*
 Stellar_0.1/stl_test_back/rqalpha/strategy/*
+Stellar_0.1/stl_test_back/stellar/data_bundle/*
+Stellar_0.1/stl_test_back/stellar/strategy/*
 
