--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ Stellar_0.1/strategy_simulator/test_back/comet/strategy/*
 .idea/vcs.xml
 
 .idea/workspace.xml
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/inspectionProfiles/profiles_settings.xml
