Tushare data storage analysis

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ Stellar_0.1/strategy_simulator/test_back/comet/strategy/*
 
 .idea/*.*
 
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/inspectionProfiles/profiles_settings.xml
